--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="contact" class="reveal">
         <h2>Contact</h2>
-        <p>Email: mahedi.hasan@example.com</p>
+        <p>Email: mdmahedinhasan@gmail.com</p>
     </section>
 
     <footer>
